--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -24,7 +24,7 @@
 			</p>
 
 		</div>
-		<lpc-directive></lpc-directive>
+		<lpc-directive class="lpcCanvasSize-big"></lpc-directive>
 
 	</div> <!-- end resources-contentBox-->
 </ion-view>
