--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,10 +1,14 @@
-<div class="lpc-container">
+<div ng-class="{'lpc-container': !tutorial}">
 
-	<div
-		class="slider-and-canvas"
-		ng-class="{'full-width': !rate && !reset}">
+	<div 
+		ng-class="{'slider-and-canvas': !tutorial}"
+		ng-class="{'full-width': !rate && !reset && !tutorial}"
+		ng-class="{'lpcCanvasSize-tutorial': tutorial}">
 		<!-- Renderer will be inserted here -->
-		<canvas id="lpc-canvas" ng-hide="lpcHidden || probe || waveHidden" ></canvas>
+		<canvas 
+			id="lpc-canvas" 
+			ng-hide="lpcHidden || probe || waveHidden || hideBtn" >
+		</canvas>
 	</div>
 
 	<div class="lpc-buttons">
@@ -39,7 +43,7 @@
 		<button
 			ng-click="showLPC()"
 			class="reset-button big-button"
-			ng-if="!probe"
+			ng-if="!probe && hideBtn"
 			ng-hide="!lpcHidden || rate">
 			Show Wave
 		</button>
@@ -47,10 +51,11 @@
 		<button
 			ng-click="hideLPC()"
 			class="reset-button big-button"
-			ng-if="!probe"
+			ng-if="!probe && hideBtn" 
 			ng-hide="lpcHidden || rate">
 			Hide Wave
 		</button>
+
 	</div>
 
 </div>
