--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -4,7 +4,12 @@
 		<div class="text-and-lpc__text">
 			This is the place to practice your /r/ sounds on your own. There are no prompts or words to match here. It's just you and the wave.
 		</div>
-		<lpc-directive slider="true" reset="true" sand="true"></lpc-directive>
+		<lpc-directive 
+			slider="true" 
+			reset="true" 
+			sand="true"
+			tutorial="false">
+		</lpc-directive>
 
 	</div> <!-- end free-contentBox-->
 </ion-view>
