--- a/staRt/www/states/root/tutorial/partialTemplates/noWave.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/noWave.html
@@ -24,12 +24,12 @@
 		</div> <!-- end noWaveBox -->
 		
 		<img 
-			ng-src="{{currStep.char.img}}" 
+			ng-src="{{currStep.pic.img}}" 
 			class="charImg" 
-			style="height:{{currStep.char.hgt}}; 
-				width:{{currStep.char.w}}; 
-				top:{{currStep.char.top}}; 
-				left:{{currStep.char.left}};">
+			style="height:{{currStep.pic.h}}; 
+				width:{{currStep.pic.w}}; 
+				top:{{currStep.pic.top}}; 
+				left:{{currStep.pic.left}};">
 		</div>
 	</div> <!-- end tutNoWave-content ng-click=""-->
 </div> <!-- end .pageView -->
