Fix tab-switching animation bug

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -15,23 +15,22 @@
         ng-repeat="tab in tabData"
         class="navTab"
         ui-sref="{{ 'root.' + tab.sref }}"
-        ng-class="{ 'active': state.current.url === tab.sref }">
+        ng-class="{ 'active': state.current.name.includes(tab.sref) }">
 
         <div class="navTabText">
 
           <!-- defines img inactive state -->
           <img
-            ng-if="state.current.url != tab.sref"
+            ng-if="!state.current.name.includes(tab.sref)"
             ng-src="{{ 'img/nav/' + tab.sref + '.svg' }}"
             class="nav-svg"
           >
           <!-- defines img active state -->
           <img
-            ng-if="state.current.url === tab.sref"
+            ng-if="state.current.name.includes(tab.sref)"
             ng-src="{{ 'img/nav/' + tab.sref + '-b.svg' }}"
             class="nav-svg animated {{ tab.ani }}"
           >
-
           {{tab.title}}
 
         </div>
