tinkering w/ wave resize code

--- a/staRt/www/states/root/tutorial/partialTemplates/default.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/default.html
@@ -45,8 +45,8 @@
 							style="background-image: url('{{currStep.LRow1.wave.lpcImg}}')">
 							</div>
 							
+							<!-- style="width:480px; height:150px;" --> 
 							<div id="lpc-canvas" 
-							style="width:480px; height:150px;" 
 							ng-if="currStep.LRow1.wave.lpcLive">
 								<lpc-directive 
 									slider="false" 
@@ -56,8 +56,7 @@
 									rate="false" 
 									hideBtn="false" 
 									reset="false"
-									tutorial="true"
-									style="width:480px; height:150px">
+									tutorial="true">
 								</lpc-directive>
 							</div> <!-- end #lpcCanvas -->
 						</div> <!-- end lpcBox -->
