--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,9 +1,13 @@
+<!-- .lpc-container is the light blue containing box-->
 <div ng-class="{'lpc-container': !tutorial}">
 
+	<!-- this holds the lpc renderer -->
 	<div 
+		id="lpc-canvas-parentSize"
 		ng-class="{'slider-and-canvas': !tutorial}"
 		ng-class="{'full-width': !rate && !reset && !tutorial}"
-		ng-class="{'lpcCanvasSize-tutorial': tutorial}">
+		>
+		<!-- ng-class="{'lpcCanvasSize-tutorial': tutorial}" -->
 		<!-- Renderer will be inserted here -->
 		<canvas 
 			id="lpc-canvas" 
