--- a/staRt/www/states/root/tutorial/partialTemplates/default.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/default.html
@@ -45,9 +45,9 @@
 							style="background-image: url('{{currStep.LRow1.wave.lpcImg}}')">
 							</div>
 							
-							<!-- style="width:480px; height:150px;" --> 
 							<div id="lpc-canvas" 
 							ng-if="currStep.LRow1.wave.lpcLive">
+							<!-- 
 								<lpc-directive 
 									slider="false" 
 									sand="false"
@@ -58,6 +58,7 @@
 									reset="false"
 									tutorial="true">
 								</lpc-directive>
+							-->
 							</div> <!-- end #lpcCanvas -->
 						</div> <!-- end lpcBox -->
 
@@ -114,8 +115,8 @@
 							</div>
 							
 							<div id="lpc-canvas" 
-							style="width:480px; height:150px;" 
 							ng-if="currStep.LRow2.wave.lpcLive">
+							<!-- 
 								<lpc-directive 
 									slider="false" 
 									sand="false"
@@ -124,8 +125,8 @@
 									rate="false" 
 									hideBtn="false" 
 									reset="false"
-									tutorial="true"
-									style="width:480px; height:150px">
+									tutorial="true">
+								-->
 								</lpc-directive>
 							</div> <!-- end #lpcCanvas -->
 						</div> <!-- end lpcBox -->
