LPC resizing correctly

--- a/staRt/www/states/root/tutorial/partialTemplates/default.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/default.html
@@ -46,7 +46,7 @@
 							</div>
 							
 							<!-- style="width:480px; height:150px;" --> 
-							<div id="lpc-canvas" 
+							<div class="lpc-canvas-area" 
 							ng-if="currStep.LRow1.wave.lpcLive">
 								<lpc-directive 
 									slider="false" 
@@ -113,7 +113,7 @@
 							style="background-image: url('{{currStep.LRow2.wave.lpcImg}}')">
 							</div>
 							
-							<div id="lpc-canvas" 
+							<div class="lpc-canvas-area" 
 							style="width:480px; height:150px;" 
 							ng-if="currStep.LRow2.wave.lpcLive">
 								<lpc-directive 
