state save before Sam call to fix xCode

--- a/staRt/www/states/root/tutorial/partialTemplates/noWave.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/noWave.html
@@ -17,6 +17,7 @@
 			<div class="inputBox">
 				<button
 					class="tutBtn"
+					ng-click="progressUpdate({{currStep.input.stepDone}})"
 					ui-sref="{{'root.tutorial.' + currStep.input.next}}">
 					{{currStep.input.txt}}
 				</button>
