--- a/staRt/www/states/root/tutorial/partialTemplates/noWave.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/noWave.html
@@ -22,7 +22,11 @@
 					{{currStep.input.txt}}
 				</button>
 			</div>
-		</div> <!-- end noWaveBox -->
+		</div> <!-- end noWaveBox 
+="progressUpdate({{currStep.input.stepDone}})"
+
+
+	-->
 		
 		<img 
 			ng-src="{{currStep.pic.img}}" 
