--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -1,10 +1,10 @@
 <div class="words-contentBox">
 
 	<button style="margin:40px;" ng-click="beginWordPractice()" ng-hide="isPracticing || !hasValidWordList">
-		Start Word Practice
+		Start {{type}} Practice
 	</button>
 	<button style="margin:40px;" ng-click="nextWord()" ng-hide="!isPracticing">
-		Next Word
+		Next {{tyep}}
 	</button>
 	<button
 		style="margin:40px;"
