--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -28,6 +28,7 @@
 			csv="csv"
 			order="order"
 			count="count"
+			type="type"
 			end-practice-callback="endProbeCallback()">
 		</practice-directive>
 
