--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -2,8 +2,23 @@
 <div ng-class="{'lpc-container': !tutorial}">
 
 	<!-- this holds the lpc renderer -->
-	<!-- HC VERSION -->
+	<!-- HC VERSION --
+	<div
+		id="lpc-canvas-parentSize"
+		ng-class="{'slider-and-canvas': !tutorial}"
+		ng-class="{'full-width': !rate && !reset && !tutorial}"
+		ng-resize="updateCanvasSize($event)"
+		>
+		<!-- ng-class="{'lpcCanvasSize-tutorial': tutorial}" --
+		<!-- Renderer will be inserted here --
+		<canvas
+			id="lpc-canvas"
+			ng-hide="lpcHidden || probe || waveHidden || hideBtn" >
+		</canvas>
+	</div>
+	-->
 
+	<!-- this holds the lpc renderer -->
 	<div
 		id="lpc-canvas-parentSize"
 		ng-class="{'slider-and-canvas': !tutorial}"
