minor clean up prior to merge with master

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,8 +1,9 @@
 <!-- .lpc-container is the light blue containing box-->
 <div ng-class="{'lpc-container': !tutorial}">
 
-	<!-- this holds the lpc renderer -->
-	<!-- HC VERSION --
+	<!-- HC ORIG VERSION (conflict) --
+	<!-- this holds the lpc renderer --
+	
 	<div
 		id="lpc-canvas-parentSize"
 		ng-class="{'slider-and-canvas': !tutorial}"
@@ -18,6 +19,7 @@
 	</div>
 	-->
 
+	<!-- I believe this is Sam's updated version -->
 	<!-- this holds the lpc renderer -->
 	<div
 		id="lpc-canvas-parentSize"
