--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -4,11 +4,12 @@
 		<div class="text-and-lpc__text">
 			This is the place to practice your /r/ sounds on your own. There are no prompts or words to match here. It's just you and the wave.
 		</div>
-		<lpc-directive 
-			slider="true" 
-			reset="true" 
+		<lpc-directive
+			slider="true"
+			reset="true"
 			sand="true"
-			tutorial="false">
+			tutorial="false"
+			active="lpcActive">
 		</lpc-directive>
 
 	</div> <!-- end free-contentBox-->
