LPC Resizing is really and trully fixed forever this time

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,5 +1,5 @@
 <!-- .lpc-container is the light blue containing box-->
-<div ng-class="lpc-container">
+<div ng-class="{'lpc-container': !tutorial, 'lpc-container-tutorial': tutorial}">
 
 	<!-- this holds the lpc renderer -->
 	<div
