--- a/staRt/www/states/root/tutorial/partialTemplates/default.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/default.html
@@ -162,12 +162,12 @@
 			<div class="inputBox">
 				<button
 					class="tutBtn"
-					ng-click="progressUpdate({{currStep.input.stepDone}})"
+					ng-click="coinUpdate({{currStep.input.stepDone}})"
 					ui-sref="{{'root.tutorial.' + currStep.input.next}}">
 					{{currStep.input.txt}}
 				</button>
 			</div>
-		</div> <!-- end leftBox progressUpdate({{currStep.input.stepDone}});  -->
+		</div> <!-- end leftBox -->
 
 
 		<!-- ==================
@@ -193,19 +193,7 @@
 					top:{{currStep.pic.top}}; 
 					left:{{currStep.pic.left}};">
 		</div> <!-- end rightBox -->
-<!-- ng-if="currStep.pic.imgAbs" -->
-<!-- 		<div class="absImgBox" ng-if="currStep.pic.imgAbs"> 
-			<span>Hello</span>
-			<img 
-				ng-src="{{currStep.pic.img}}" 
-				class="absImg" 
-				style="height:{{currStep.pic.h}}; 
-					width:{{currStep.pic.w}}; 
-					top:{{currStep.pic.top}}; 
-					left:{{currStep.pic.left}};">
-		</div> -->
-
+		
 	</div> <!-- end tutPgView-content -->
-
 </div> <!-- end .pageView -->
 
