lpc directive clean-up and documentation in preparation for tutorial p05s4

--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -24,7 +24,10 @@
 			</p>
 
 		</div>
-		<lpc-directive class="lpcCanvasSize-big"></lpc-directive>
+		<lpc-directive
+			sand="false"
+			slider="false">
+		</lpc-directive>
 
 	</div> <!-- end resources-contentBox-->
 </ion-view>
