updates links to absolute paths in data files

--- a/staRt/www/states/root/tutorial/partialTemplates/default.html
+++ b/staRt/www/states/root/tutorial/partialTemplates/default.html
@@ -164,7 +164,7 @@
 				<button
 					class="tutBtn"
 					ng-click="coinUpdate({{currStep.input.stepDone}})"
-					ui-sref="{{'root.tutorial.' + currStep.input.next}}">
+					ui-sref="{{currStep.input.next}}">
 					{{currStep.input.txt}}
 				</button>
 			</div>
