--- a/staRt/www/states/root/syllables/syllables_template.html
+++ b/staRt/www/states/root/syllables/syllables_template.html
@@ -1,3 +1,9 @@
 <ion-view view-title="Syllables" class="state-contentBox">
-	<practice-directive csv='"data/Syllable_Practice.csv"' order='"random"' count="100" pauseEvery="10" type='"Syllable"'></practice-directive>
+	<practice-directive
+		csv='"data/Syllable_Practice.csv"'
+		order='"random"'
+		count="100"
+		pause-every="10"
+		type='"Syllable"'>
+	</practice-directive>
 </ion-view>
