See #61 --- Added button to reset LPC filter order

--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -11,11 +11,13 @@
 					min. 25
 				</div>
 
-				<input type="range" min="25" max="45" ng-model="lpcOrder" ng-change="updatePluginLPCOrder()"/>
+				<input type="range" min="25" max="45" ng-model="lpcOrder" ng-change="updatePluginLPCOrder()" />
 
 				<div class="range-label">
 					max. 45
 				</div>
+
+				<button name="reset" ng-click="resetPluginLPCOrder()" class="reset-button big-button">Reset</button>
 			</div>
 
 			<p>
