Fixes #118 ---- the case of the missing hide biofeedback button

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -10,12 +10,12 @@
 		<!-- Renderer will be inserted here -->
 		<canvas
 			id="lpc-canvas"
-			ng-hide="lpcHidden || probe || waveHidden || hideBtn" >
+			ng-hide="lpcHidden || probe || waveHidden" >
 		</canvas>
 
 		<div
 			class="waveLabel"
-			ng-hide="!(lpcHidden || probe || waveHidden || hideBtn)" >
+			ng-hide="!(lpcHidden || probe || waveHidden)" >
 			Wave Hidden
 		</div>
 
